<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/login"
        >
        <menu>
            <item
                android:id="@+id/inbox_item"
                android:icon="@drawable/baseline_home_black_24dp"
                android:title="@string/home"
                android:checkable="true"/>
            <item
                android:id="@+id/favourites_item"
                android:icon="@drawable/baseline_account_circle_black_24dp"
                android:title="@string/personal_account"
                android:checkable="true"/>
            <item
                android:id="@+id/outbox_item"
                android:icon="@drawable/baseline_settings_black_24dp"
                android:title="@string/settings"
                android:checkable="true"/>
        </menu>
    </item>
</menu>