<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_community">

    <activity
        android:id="@+id/nav_home"
        android:name="com.example.helloworld2.MyActivity"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_community"
        android:name="com.example.helloworld2.Fragment.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />

    <activity
        android:id="@+id/nav_main"
        android:name="com.example.helloworld2.activity_topbar"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />


</navigation>