<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/cuisine3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/appname"
        android:text="@string/projectname"
        android:textSize="45sp"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:scaleType="centerInside"
        android:textColor="#444"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:reflectionColor="#f00"/>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        android:elevation="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login2"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/signintocontinue"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameinput"
            style="@style/text_input_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@id/appname"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="16dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswinput"
            style="@style/text_input_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw"
            app:layout_constraintTop_toBottomOf="@id/usernameinput"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:padding="16dp"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter"
            android:hint="@string/enter"
            style="@style/button_enter"
            android:background="#FF6666"
            android:onClick="JumpToRegister"
            >
        </Button>

        <TextView
            android:id="@+id/forgetpsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:hint="@string/forgetpsw"
            android:layout_marginStart="155dp"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout1"
            android:onClick="JumpToForgetPsw"/>
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:hint="@string/register"
        android:onClick="JumpToRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/black">
    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>