<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registeractivity"
    android:orientation="vertical"
    android:background="@drawable/cuisine3">

    <LinearLayout
        android:id="@+id/air"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="15dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air"
        android:elevation="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register1"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/signuptocontinue"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginBottom="25dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameinput_register"
            style="@style/text_input_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="16dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswinput_register"
            style="@style/text_input_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw"
            app:layout_constraintTop_toBottomOf="@id/usernameinput"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psw_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:padding="16dp"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pswinput_register_again"
            style="@style/text_input_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw_putinto_again"
            app:layout_constraintTop_toBottomOf="@id/usernameinput"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/psw_register_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:padding="16dp"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter1"
            android:hint="@string/register1"
            style="@style/button_enter"
            android:background="#FF6666"
            >
        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>